--- a/slides/main_Latypov.tex
+++ b/slides/main_Latypov.tex
@@ -169,22 +169,23 @@
 	
 	\begin{frame}{Результаты экспериментов}
 		
-		Так как траектории скрытых состояний представляют собой периодическую структуру можем применять к ним метод сходящегося перекрестного отображения
+		- Так как траектории скрытых состояний представляют собой периодическую структуру можем применять к ним метод сходящегося перекрестного отображения
 		
+		- В отличие от CCM, на основе которого строится метод, он может применяться к многомерным данным. 
 		
-		----------------------------------------------------
-		
-		красивый график
-		
-		==========================
+		\begin{figure}
+			\includegraphics[width = 0.3\textwidth]{images/left_3d.jpg}
+			\includegraphics[width = 0.3\textwidth]{images/right_3d.jpg}
+		\end{figure}
 	\end{frame}
 	
 	%----------------------------------------------------------------------------------------------------------
 	
-	\begin{frame}{Промежуточные выводы}
+	\begin{frame}{Выводы}
 		\begin{itemize}
 			\item Разработан метод для выявления зависимостей в многомерных временных рядах.
-			\item не исследованы границы применимости метода.
+			\item Показано, что он может применяться к данным акселерометра.
+			\item Границы применимости метода не исследованы.
 		\end{itemize}
 	\end{frame}
 	
